# mark.me

./: .gitignore  README.md  pyproject.toml
mark_me/: .gitignore  __init__.py  __main__.py  app.py  cli.py  core.py  gui.py  i18n.py
mark_me/locales/: de.json  en.json  es.json  pt_BR.json
